# raccoon

./: .gitignore  Cargo.toml  IDEAS.md  LANGUAGE.md  README.md  package.json  tsconfig.json
bench/: Cargo.toml
cli/: Cargo.toml
compiler/: Cargo.toml  lexer.rs  lib.rs  parser.rs  semantic.rs  span.rs
compiler/codegen/: module.rs
compiler/lexer/: errors.rs  index.rs  lexer.grammar  lexer.rs  mod.rs  token.rs  utils.rs
compiler/parser/: mod.rs
compiler/semantic/: mod.rs  semantic.rs
compiler/src/: lib.rs
compiler/src/lexer/: errors.rs  lexer.rs  test.rs  token.rs
compiler/src/parser/: parser.rs  test.rs
crates/compiler/: Cargo.toml  lib.rs
crates/compiler/ir/: ast.rs
crates/compiler/lexer/: errors.rs  lexer.grammar  lexer.rs  mod.rs  test.rs  token.rs
crates/compiler/parser/: parser.grammar  test.rs
crates/macros/: Cargo.toml  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs
macros/: Cargo.toml
macros/examples/: backtrack.rs  backtrack_memoize.rs  memoize.rs
macros/inner/: Cargo.toml
macros/lib/: Cargo.toml
macros/proc-macros/: Cargo.toml
macros/src/: lib.rs
proptests/: Cargo.toml  lib.rs
raccoon-cli/: Cargo.toml
raccoon-compiler/: Cargo.toml  errors.rs  lib.rs
raccoon-compiler/lexer/: .grammar  errors.rs  lexer.rs  mod.rs  utils.rs
raccoon-compiler/parser/: .grammar  mod.rs  parser.rs
raccoon-macros/: Cargo.toml
raccoon-macros/examples/: memoize.rs
raccoon-tests/: Cargo.toml  lib.rs
raccoon-tests/compiler/: lexer.rs
std/: README.md
tests/: Cargo.toml  compiler.rs  lib.rs
tests/compiler/: lexer.rs
(+19 files in other folders)
