[package]
name = "raccoon-compiler"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lru = "0.8"
raccoon-macro-lib = { path = "../macros/lib" }
raccoon-proc-macros = { path = "../macros/proc-macros" }
wasm-encoder = "0.3"

[lib]
path = "src/lib.rs"
