[package]
name = "raccoon-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
wasm-encoder = "0.3"

[dev-dependencies]
proptest = "1.0.0"
test-strategy = "0.2.0"

[lib]
path = "lib.rs"
